--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -8,6 +8,7 @@
     />
     <title>Futureboard Studio</title>
     <link rel="stylesheet" href="./shared/style.css">
+    <link rel="icon" type="image/x-icon" href="./shared/icon.ico" sizes="16x16" />
 </head>
 <body>
     <div id="root"></div>
